<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
        <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_host"
        android:hint="@string/hint_host"
        android:maxLines="1"
        android:singleLine="true"
        />
        <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_port"
        android:hint="@string/hint_port"
        android:inputType="number"
        android:maxLines="1"
         android:singleLine="true"
        />
        <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_name"
        android:hint="@string/hint_name"
        android:maxLines="1"
         android:singleLine="true"
        />
        <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_psw"
        android:hint="@string/hint_psw"
        android:maxLines="1"
         android:singleLine="true"
        />
        <TextView 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/label_server_list"
         android:gravity="center"
         android:textSize="30dp"
        />
        </LinearLayout>